--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 100vh;
-  display: flex;
+}
+
+.columnDisposition {
+  display:flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.homeCards {
+  text-align: left;
+  width: 996px;
+  padding: 10px 0px 30px 0px;
+  border: 2px solid gray;
+}
+
+h1 {
+  margin-left: 30px;
+}
+
+p {
+  width: 800px;
+  margin-left: 30px;
+}
+
+a {
+  text-decoration: none;
+  color:black;
+}
+
+.navbarStyle {
+  width: 996px;
+  height: 100px;
   color: white;
+  border: 2px solid black;
+  background-color: rgb(4, 152, 252);
+  padding-top: 35px;
+  padding-bottom: 10px;  
 }
 
-.App-link {
-  color: #61dafb;
+.beerCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 996px;
+  height: 250px;
+  border: 2px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.infoBeer {
+  width: 300px;
+  margin-right: 80px;
 }
+
+h2 {
+  text-align: center;
+}
+
+.rowDisposition {
+  display:flex;
+  flex-direction: row;
+  justify-content:  space-around;
+  align-items: center;
+  width: 450px;
+  margin: 30px 0px;  
+}
+
+.detailsCard {
+  margin-top: 60px;
+  width: 500px;
+}
+
+.textStyle {
+  text-align: justify;
+  color: blue;
+}
+
+button {
+  padding: 16px;
+  width: 400px;
+  color: white;
+  font-size: larger;
+  font-weight: bold;
+  background-color: rgb(4, 152, 252);
+  border-radius: 12px;
+  margin-top: 30px;
+}
+
+.inputStyle {
+  width: 400px;
+  height: 30px;
+  margin-top: 5px;
+  border-radius: 12px;
+}
+
+#descriptionInput {
+  height: 100px;
+}
+
+.formDisposition {
+  display:flex;
+  flex-direction: column;
+  margin-top: 30px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.formSearch {
+  display:flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: larger;
+  text-align: left;
+}
+
